# 7-Wonders-Duel

./: .gitignore  7WondersDuel.pro  7WondersDuel.pro.autosave  CMakeLists.txt  Card.h  DeckElement.h  Diagramme_classes.puml  LICENSE.md  Makefile  ProgressToken.h  README.md  Ressource.h  ScientificSymbol.cpp  ScientificSymbol.h  Scientificsymbol.h  SevenWonderUI.ui  SevenWonders.cpp  SevenWonders.h  SevenWonders.sln  SevenWonders.vcxproj  SevenWonders.vcxproj.filters  Wonder.h  city.cpp  city.h  moc_ChooseWondersUI.cpp  moc_EndGamePopUp.cpp  moc_Game.cpp  moc_SevenWonderUI.cpp  moc_StartMenu.cpp  moc_cardwidget.cpp  moc_game_window.cpp  qrc_ressources.cpp  ressources.qrc  test.cpp  ui_SevenWonderUI.h
7WondersDuel.app/Contents/: Info.plist
SevenWonders/Debug/: SevenWonders.exe.recipe  SevenWonders.ilk  vc143.idb
SevenWonders/Debug/SevenWonders.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SevenWonders.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
data/: GameAlgorithm.txt  buildings_layout.json  cards.json  data.json  game_parameters.json
docs/: Diagramme_classes.puml  Widget Activation.txt
includes/: City.h  ConflictPawn.h  DeckElement.h  MarketDeck.h  Ressource.h  Wonder.h
includes/BoardManager/: Board.h  ConflictPawn.h
includes/Cards/: Building.h  Card.h  ProgressToken.h  RessourceCost.h  Wonder.h
includes/City/: City.h  Ressource.h  ScientificSymbol.h
includes/DataFetcher/: BuildingsLayout.h  File.h  GameParameters.h  instanciator.h
includes/DeckManager/: DeckElement.h  MarketDeck.h
includes/Effects/: CoinEffect.h  Effect.h  EffectFactory.h  IncludeEffects.h  ScientificSymbolEffect.h
includes/Effects/List/: AddMoney.h  AddRessource.h  AddRessourceChoice.h  AddScientificSymbol.h  AddVictoryPoint.h  AdversaryPaysMoneyToBank.h  BuildOneDiscardedBuilding.h  ChangeMarketRule.h  ChooseOneProgressTokenWithinThreeDiscarded.h  ChooseProgressTokenDiscarded.h  DiscardAdversaryBrownCard.h  DiscardAdversaryCard.h  EarnFourMoneyPerBuildingChaining.h  EarnMoneyPerBuildingChaining.h  EarnMoneyPerMostAtConstruct.h  EarnMoneyPerWonderAtConstruct.h  EarnThreeVictoryPointsPerProgressTokenAtEndGame.h  EarnVictoryPointPerLotOfMoneyMostAtEndGame.h  EarnVictoryPointPerMostWonderAtEndGame.h  EarnVictoryPointPerThingMostAtEndGame.h  EarnVictoryPointsPerProgressTokenAtEndGame.h  EarnXMoneyPerMostAtConstruct.h  EarnXMoneyPerWonderAtConstruct.h  EarnXVictoryPointPerGoldAndBrownMostAtEndGame.h  EarnXVictoryPointPerLotOfMoneyMostAtEndGame.h  EarnXVictoryPointPerMostWonderAtEndGame.h  EarnXVictoryPointPerThingMostAtEndGame.h  EarnXVictoryPointsPerProgressTokenAtEndGame.h  InstantReplaying.h  MoveConflictPawn.h  MoveConflictPawnMorePerNew.h  MoveConflictPawnOneMorePerNewRed.h  NewWondersHaveInstantReplaying.h  TakeAdversaryTradeMoney.h  TakeScientificSymbol.h  WonderCostReducedByX.h  buildingcostreducedbyx.h
includes/Game/: DeckPile.h  Game.h  GameUI.h  Player.h  PlayerUI.h
includes/Ui/: ChooseWondersUI.h  Connector.h  EndGamePopUp.h  Observer.h  SevenWonderUI.h  StartMenu.h  Subject.h  cardwidget.h  game_window.h  gamewindow.h  mainwindow.h  marketdeckwidget.h  militarydeck.h  playerwidget.h  selectwidget.cpp  selectwidget.h
src/: Card.h  City.cpp  City.h  ConflictPawn.cpp  DeckElement.cpp  DeckElement.h  ProgressToken.h  Ressource.cpp  Ressource.h  ScientificSymbol.h  Scientificsymbol.h  SevenWonders.cpp  Wonder.cpp  Wonder.h  city.cpp  city.h  conflictpawn.h  main.cpp
src/BoardManager/: Board.cpp  ConflictPawn.cpp
src/Cards/: Building.cpp  Card.cpp  ProgressToken.cpp  RessourceCost.cpp  Wonder.cpp
src/City/: City.cpp  Ressource.cpp  Ressources.cpp  ScientificSymbol.cpp
src/DataFetcher/: BuildingsLayout.cpp  File.cpp  GameParameters.cpp  instanciator.cpp  instanciator.h
src/DeckManager/: DeckElement.cpp  MarketDeck.cpp
src/Effects/: Effect.cpp
src/Effects/List/: AddMoney.cpp  AddRessource.cpp  AddRessourceChoice.cpp  AddScientificSymbol.cpp  AddVictoryPoint.cpp  AdversaryPaysMoneyToBank.cpp  BuildOneDiscardedBuilding.cpp  BuildingCostReducedByX.cpp  ChangeMarketRule.cpp  ChooseOneProgressTokenWithinThreeDiscarded.cpp  ChooseProgressTokenDiscarded.cpp  DiscardAdversaryCard.cpp  EarnMoneyPerBuildingChaining.cpp  EarnMoneyPerMostAtConstruct.cpp  EarnMoneyPerWonderAtConstruct.cpp  EarnVictoryPointPerLotOfMoneyMostAtEndGame.cpp  EarnVictoryPointPerMostWonderAtEndGame.cpp  EarnVictoryPointPerThingMostAtEndGame.cpp  EarnVictoryPointsPerProgressTokenAtEndGame.cpp  EarnXMoneyPerMostAtConstruct.cpp  EarnXMoneyPerWonderAtConstruct.cpp  EarnXVictoryPointPerLotOfMoneyMostAtEndGame.cpp  EarnXVictoryPointPerMostWonderAtEndGame.cpp  EarnXVictoryPointPerThingMostAtEndGame.cpp  EarnXVictoryPointsPerProgressTokenAtEndGame.cpp  InstantReplaying.cpp  MoveConflictPawn.cpp  MoveConflictPawnMorePerNew.cpp  NewWondersHaveInstantReplaying.cpp  TakeAdversaryTradeMoney.cpp  TakeScientificSymbol.cpp  WonderCostReducedByX.cpp
src/Game/: DeckPile.cpp  Game.cpp  GameUI.cpp  Player.cpp  PlayerUI.cpp
src/Ui/: ChooseWondersUI.cpp  Connector.cpp  EndGamePopUp.cpp  SevenWonderUI.cpp  StartMenu.cpp  UiTest.cpp  cardwidget.cpp  game_window.cpp  gamewindow.cpp  main.cpp  mainwindow.cpp  mainwindow.h  marketdeckwidget.cpp  militarydeck.cpp  playerwidget.cpp  playerwidget.h  selectwidget.cpp  uitest.cpp
test/: example_test_feature_1.cpp  example_test_feature_2.cpp  test_effects.cpp
x64/Debug/: SevenWonders.exe.recipe  SevenWonders.ilk  SevenWonders.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/SevenWonders.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SevenWonders.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
